data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_417.wast
;; 8. **Test Description**: A complex `loop` with `if` conditions determining branches, where `else` branches misinterpret conditions to erroneously activate `unreachable` instructions:    - **Constraint Checked**: Proper condition checks for `if-else` branches in loops.    - **Unreachable Code Execution**: Misinterpreted or flip-flopped conditions might incorrectly execute `unreachable`.

(assert_invalid
  (module
    (func $complex-loop-with-if-else-branch
      (loop (result i32)
        (i32.const 1)
        (if (result i32)
          (then
            (br 0) 
          )
          (else
            (unreachable)
          )
        )
      )
    )
  )
  "unreachable code execution"
)